[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color( 0, 0, 0, 0.392157 )
margin_left = -256.0
margin_top = -150.0
margin_right = 255.0
margin_bottom = 149.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
margin_right = 511.0
margin_bottom = 299.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="ColorRect" parent="ColorRect/CenterContainer"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 155.0
margin_top = 99.0
margin_right = 355.0
margin_bottom = 199.0
rect_min_size = Vector2( 200, 100 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 165.0
margin_top = 106.0
margin_right = 345.0
margin_bottom = 192.0

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 14.0
text = "Pause"
align = 1

[node name="Retour" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 180.0
margin_bottom = 38.0
text = "Retour au jeu"

[node name="RetourDebut" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 180.0
margin_bottom = 62.0
text = "Retour au d√©but du niveau"

[node name="MenuPrincipal" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 180.0
margin_bottom = 86.0
text = "Retour au Menu Principal"

[connection signal="button_down" from="ColorRect/CenterContainer/VBoxContainer/Retour" to="." method="_on_Retour_button_down"]
[connection signal="button_down" from="ColorRect/CenterContainer/VBoxContainer/RetourDebut" to="." method="_on_RetourDebut_button_down"]
[connection signal="button_down" from="ColorRect/CenterContainer/VBoxContainer/MenuPrincipal" to="." method="_on_MenuPrincipal_button_down"]
